# z3y_plugin_framework

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  NOTICE  README.md
framework/: auto_registration.h  class_id.h  component_helpers.h  connection.h  connection_type.h  event_helpers.h  framework_events.h  i_component.h  i_event_bus.h  i_plugin_query.h  i_plugin_registry.h  interface_helpers.h  plugin_cast.h  plugin_exceptions.h  plugin_impl.h  plugin_manager.h  plugin_registration.h  z3y_define_impl.h  z3y_define_interface.h  z3y_framework.h  z3y_framework_api.h  z3y_service_locator.h  z3y_utils.h
src/host_console_demo/: CMakeLists.txt  host_event_listener.cpp  host_event_listener.h  main.cpp
src/interfaces_core/: CMakeLists.txt  config_types.h  i_config_service.h  i_log_service.h  z3y_log_macros.h
src/interfaces_demo/: CMakeLists.txt  demo_events.h  i_advanced_demo_logger.h  i_demo_event_sender.h  i_demo_logger.h  i_demo_module.h  i_demo_runner.h  i_demo_simple.h
src/interfaces_profiler/: CMakeLists.txt  i_profiler_service.h  profiler_macros.h  profiler_types.h
src/interfaces_ui/: CMakeLists.txt  i_config_ui_manager.h
src/plugin_config_manager/: CMakeLists.txt  ConfigManager_Manual.md  config_provider_service.cpp  config_provider_service.h
src/plugin_demo_core_services/: CMakeLists.txt  advanced_demo_logger.cpp  advanced_demo_logger.h  demo_logger_service.cpp  demo_logger_service.h  demo_simple_impl_a.cpp  demo_simple_impl_a.h  demo_simple_impl_b.cpp  demo_simple_impl_b.h  plugin_entry.cpp
src/plugin_demo_module_core/: CMakeLists.txt  demo_core_features.cpp  demo_core_features.h  plugin_entry.cpp
src/plugin_demo_module_events/: CMakeLists.txt  demo_event_sender.cpp  demo_event_sender.h  demo_events_features.cpp  demo_events_features.h  plugin_entry.cpp
src/plugin_demo_module_introspection/: CMakeLists.txt  introspection_features.cpp  introspection_features.h  plugin_entry.cpp
src/plugin_demo_runner/: CMakeLists.txt  demo_runner_service.cpp  demo_runner_service.h  plugin_entry.cpp
src/plugin_profiler/: CMakeLists.txt  Profiler_Manual.md  plugin_entry.cpp  profiler_config.json  profiler_service.cpp  profiler_service.h
src/plugin_qt_config_ui/: CMakeLists.txt  Plugin_Qt_Config_UI_Manual.md  config_main_window.cpp  config_main_window.h  config_ui_manager_service.cpp  config_ui_manager_service.h  dependency_graph.cpp  dependency_graph.h  event_bridge.cpp  event_bridge.h  plugin_entry.cpp  qt_utils.h  scroll_guard.h  widget_factory.cpp  widget_factory.h  z3y_config_ui.qrc  z3y_config_ui_zh_CN.qm  z3y_config_ui_zh_CN.ts
src/plugin_spdlog_logger/: CMakeLists.txt  SpdlogLogger_Manual.md  logger_config.json  plugin_entry.cpp  spdlog_observer_sink.h  spdlog_provider_service.cpp  spdlog_provider_service.h
src/z3y_plugin_manager/: CMakeLists.txt  connection.cpp  event_bus_impl.cpp  platform_posix.cpp  platform_win.cpp  plugin_manager.cpp  plugin_manager_pimpl.h
tests/: CMakeLists.txt
tests/common/: plugin_test_base.h
tests/integration/: test_concurrency.cpp  test_config_plugin.cpp  test_event_system.cpp  test_introspection.cpp  test_loader_robustness.cpp  test_profiler_plugin.cpp  test_service_locator.cpp  test_spdlog_plugin.cpp  test_type_system.cpp
tools/tool_log_benchmark/: CMakeLists.txt  benchmark_config.json  main.cpp
